<resources>
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="jmui_user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4–128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>
    <string name="all_images">全部图片</string>
    <string name="select_limit">最多选择%1$s张图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="select_send">完成(%1$s/%2$s)</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="origin_size">原图(%1$s)</string>
    <string name="nickname_hit">昵称</string>
    <string name="jmui_take_new_photo">拍摄照片</string>
    <string name="jmui_take_photo">拍照</string>
    <string name="jmui_pick_picture_from_local">选择图片</string>
    <string name="get_photo">　使用照片</string>
    <string name="updating_avatar_hint">正在上传头像</string>
    <string name="avatar_modify_succeed_toast">头像修改成功</string>
    <string name="later_setting">稍后设置</string>
    <string name="saving_hint">正在保存</string>
    <string name="nickname_save_failed">昵称保存失败</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查您的网络设置</string>
    <string name="actionbar_msg">会话</string>
    <string name="cross_app_key">跨应用</string>
    <string name="actionbar_conversation">会话</string>
    <string name="actionbar_contact">通讯录</string>
    <string name="actionbar_me">我</string>
    <string name="search_friend_hit">邮箱/用户名/ID</string>
    <string name="search">搜索</string>
    <string name="take_monent">稍等片刻</string>
    <string name="add">添加</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friend_without_confirm">添加好友</string>
    <string name="fetch_user_info_failed">用户信息获取失败</string>
    <string name="create_group">发起群聊</string>
    <string name="creating_hint">创建中</string>
    <string name="creating_msg">意见反馈中</string>
    <string name="create_user">我们正在建立您的个人档案</string>
    <string name="search_friend_title_bar">搜索好友</string>
    <string name="friend_request_hit">请你输入你的添加好友请求</string>
    <string name="friend_request_input_hit">我是</string>
    <string name="send_request">发送请求</string>
    <string name="jmui_copy">复制</string>
    <string name="jmui_forward_msg">转发</string>
    <string name="jmui_copy_toast">已复制</string>
    <string name="jmui_delete">删除</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="jmui_delete_conv">删除该聊天</string>
    <string name="jmui_create_file_failed">创建文件失败</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_send_voice_hint">松开 结束</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_rest_record_time_hint">还可以说%s秒</string>
    <string name="combine_title">(%s)</string>
    <string name="jmui_file_not_found_toast">文件丢失, 尝试重新获取</string>
    <string name="not_select_photo">你没有选择照片，请重新选择</string>
    <string name="picture_not_found">没有找到您想要的图片</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_failed_toast">加载失败</string>
    <string name="info_null">未填写</string>
    <string name="change_avatar">修改头像</string>
    <string name="operation">操作</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="jmui_send">发送</string>
    <string name="already_select">已选</string>
    <string name="send_message">发消息</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_cancel">取消</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="load_origin_image">查看原图</string>
    <string name="downloading_hint">正在下载</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="choose_album_title">选择相册</string>
    <string name="friend_opt_change_name">修改备注</string>
    <string name="friend_opt_delete">删除好友</string>
    <string name="friend_opt_detail">详细资料</string>
    <string name="detail_info">个人资料</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="jmui_record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="draft">[草稿]</string>
    <string name="jmui_picture">图片</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="type_file">[文件]</string>
    <string name="type_smallvideo">[小视频]</string>
    <string name="type_video">[视频]</string>
    <string name="send_location">发送地理位置</string>
    <string name="permission_should_allow">请允许使用位置权限，否则无法发送位置消息</string>
    <string name="send_location_error">位置截图失败或会话为空</string>
    <string name="jmui_video">视频</string>
    <string name="jmui_location">位置</string>
    <string name="jmui_business_card">名片</string>
    <string name="group_notification">[群组消息]</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="hundreds_of_unread_msgs">..\.</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm:ss </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_yesterday">前天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="select_friend_title">添加成员</string>
    <string name="selected_num">(%s)</string>
    <string name="switch_to_friendless_mode">切换到无好友模式</string>
    <string name="switch_to_friend_mode">切换到好友模式</string>
    <string name="switch_to_friend_mode_hint">在设置中切换到好友模式\n以启用通讯录功能</string>
    <string name="friend_inviting">等待验证</string>
    <string name="friend_verify_title">验证消息</string>
    <string name="input_friend_username_hint">请输入您要查找的用户名</string>
    <string name="sent_request">已成功发送请求</string>
    <string name="accept">同意</string>
    <string name="refuse">拒绝</string>
    <string name="refused">已拒绝</string>
    <string name="processing">正在处理</string>
    <string name="send_refuse_reason_title">拒绝理由</string>
    <string name="reason_is_empty_hint">理由不能为空</string>
    <string name="decline_friend_invitation">对方已拒绝</string>
    <string name="delete_friend_dialog_title">确定删除好友？</string>
    <string name="friend_already_deleted_hint">已移除好友</string>
    <string name="file">文件</string>
    <string name="document">文档</string>
    <string name="album">相册</string>
    <string name="audio">音频</string>
    <string name="other">其他</string>
    <string name="size_over_limit_hint">所选的文件数量不得超过5个</string>
    <string name="file_size_over_limit_hint">所选的文件大小总和不得超过10M</string>
    <string name="video_not_support_hint">暂不支持发送视频</string>
    <string name="download_file_succeed">下载成功</string>
    <string name="download_file_failed">下载失败</string>
    <string name="file_not_support_hint">无法打开该类型的文件</string>
    <string name="file_already_copy_hint">文件已保存到 sdcard/JChatDemo/recvFiles 目录下</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="commit">确认</string>
    <string name="jmui_confirm">确定</string>
    <string name="finish">完成</string>
    <string name="upload_avatar_title">请选择上传头像方式</string>
    <string name="setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="add_to_friend">加为好友</string>
    <string name="setting_username_hit">昵称</string>
    <string name="setting_username_big_hit">更改名字</string>
    <string name="reset_nickname_hint">好名字可以让你的朋友更加容易记住你。</string>
    <string name="note_name">备注名</string>
    <string name="note_name_is_empty_hint">备注名为空</string>
    <string name="description">描述</string>
    <string name="setting_location_hit">地区</string>
    <string name="input_location_title">输入地区</string>
    <string name="input_area_error">请输入您所在的地区</string>
    <string name="setting_location_big_hit">修改地区</string>
    <string name="setting_signature_hit">个信签名</string>
    <string name="input_signature_toast">请输入您的个性签名</string>
    <string name="edit_signature_title">编辑个性签名</string>
    <string name="edit_signature_count">30</string>
    <string name="edit_friend_info_count">200</string>
    <string name="save">保存</string>
    <string name="animate">Animate</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="down_arrow">\u2193</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="left_arrow">\u2190</string>
    <string name="move_the_camera">移动camera</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="tilt">倾斜手势</string>
    <string name="up_arrow">\u2191</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
</resources>